[package]
name = "hexmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lerp = { version="*" }
serde = { version="*", features=["derive"] }
bevy = { version="0.11", optional=true }

[dev-dependencies]
rand = "*"
rand_distr = "*"
svg = "*"

[features]
bevy = ["dep:bevy"]